fix alignment;

--- a/assets/news.css
+++ b/assets/news.css
@@ -127,16 +127,15 @@
 
 .more_info {
     color: var(--main-color);
-    width: 10rem;
+    width: 11rem;
     height: 2.5rem;
     border: 2px solid var(--main-color);
     border-radius: 2rem;
     display: flex;
     justify-content: center;
-    align-self: end;
     align-items: center;
     gap: 0.5rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 600;
 
     transition: all 1s ease;
